fix: use flexbox to align heading anchors

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -331,17 +331,17 @@ svg.gblog-icon {
   }
 
   &__anchorwrap {
+    gap: 0.5em;
+
     &:hover .gblog-post__anchor svg.gblog-icon {
       color: var(--control-icons);
     }
   }
 
   &__anchor {
-    margin-left: $padding-8;
-
     svg.gblog-icon {
-      width: 1.25em;
-      height: 1.25em;
+      width: 1.85em;
+      height: 1.85em;
       color: transparent;
     }
 
